--- a/sanguo-yanyi-02/index.html
+++ b/sanguo-yanyi-02/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="google-adsense-account" content="ca-pub-2500321598693721">
-
+<!-- <meta name="google-adsense-account" content="ca-pub-2500321598693721"> -->
 
 <link rel="icon" href="/assets/images/logo.png">
 
@@ -43,6 +42,8 @@
 <link href="/assets/css/main.css" rel="stylesheet">
 
 <script src="/assets/js/jquery.min.js"></script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2500321598693721" crossorigin="anonymous"></script>
 
 </head>
 
