deploy: zya-han/zya-han.github.io-private@468344ef3cdf4023a889ca6662d64e59ea5a1236

--- a/hua-tuo-s-cream-mask/index.html
+++ b/hua-tuo-s-cream-mask/index.html
@@ -257,15 +257,17 @@
 
 <p>이 연고는 무엇으로 만들었을까요? 재료의 목록이 아주 화려합니다.</p>
 
-<ul>
-  <li>두형<sup>杜蘅</sup>, 두약<sup>杜若</sup>, 방풍<sup>防風</sup>, 고본<sup>藁本</sup>, 세신<sup>細辛</sup>, 백부자<sup>白附子</sup>, 목란피<sup>木蘭皮</sup>, 당귀<sup>當歸</sup>, 백출<sup>白朮</sup>, 독활<sup>獨活</sup>, 백복령<sup>白茯苓</sup>, 위유<sup>葳蕤</sup>, 백지<sup>白芷</sup>, 천문동<sup>天門冬</sup>, 옥설<sup>玉屑</sup> 각 1냥</li>
-  <li>토사자<sup>菟絲子</sup>, 방기<sup>防己</sup>, 상륙<sup>商陸</sup>, 치자화<sup>梔子花</sup>, 귤피<sup>橘皮</sup>, 동과인<sup>冬瓜仁</sup>, 미무화<sup>蘼蕪花</sup> 각 3냥</li>
-  <li>곽향<sup>藿香</sup>, 정향<sup>丁香</sup>, 영릉향<sup>零陵香</sup>, 감송향<sup>甘松香</sup>, 청목향<sup>青木香</sup> 각 2냥</li>
-  <li>사향<sup>麝香</sup> 반 냥</li>
-  <li>흰 거위의 기름<sup>白鵝脂</sup> 반 되</li>
-  <li>흰 양의 기름<sup>白羊脂</sup>, 소의 골수<sup>牛髓</sup> 각 한 냥</li>
-  <li>양??<sup>羊𦚠三具</sup> 세 개</li>
-</ul>
+<blockquote>
+  <ul>
+    <li>두형<sup>杜蘅</sup>, 두약<sup>杜若</sup>, 방풍<sup>防風</sup>, 고본<sup>藁本</sup>, 세신<sup>細辛</sup>, 백부자<sup>白附子</sup>, 목란피<sup>木蘭皮</sup>, 당귀<sup>當歸</sup>, 백출<sup>白朮</sup>, 독활<sup>獨活</sup>, 백복령<sup>白茯苓</sup>, 위유<sup>葳蕤</sup>, 백지<sup>白芷</sup>, 천문동<sup>天門冬</sup>, 옥설<sup>玉屑</sup> 각 1냥</li>
+    <li>토사자<sup>菟絲子</sup>, 방기<sup>防己</sup>, 상륙<sup>商陸</sup>, 치자화<sup>梔子花</sup>, 귤피<sup>橘皮</sup>, 동과인<sup>冬瓜仁</sup>, 미무화<sup>蘼蕪花</sup> 각 3냥</li>
+    <li>곽향<sup>藿香</sup>, 정향<sup>丁香</sup>, 영릉향<sup>零陵香</sup>, 감송향<sup>甘松香</sup>, 청목향<sup>青木香</sup> 각 2냥</li>
+    <li>사향<sup>麝香</sup> 반 냥</li>
+    <li>흰 거위의 기름<sup>白鵝脂</sup> 반 되</li>
+    <li>흰 양의 기름<sup>白羊脂</sup>, 소의 골수<sup>牛髓</sup> 각 한 냥</li>
+    <li>양??<sup>羊𦚠三具</sup> 세 개</li>
+  </ul>
+</blockquote>
 
 <p>목록을 자세히 보면 마지막 네 가지의 동물성 재료로 연고의 제형을 만들고, 나머지 스물여덟 가지 재료가 약효나 향을 내었으리라고 추측할 수 있습니다.
 그야말로 28종의 약재를 넣은 한방(漢方) 연고! 인 셈입니다.</p>
