deploy: zya-han/zya-han.github.io-private@7c4a3869343873a6091813ebd213e8e843facce7

--- a/mi-is-not-rice/index.html
+++ b/mi-is-not-rice/index.html
@@ -262,9 +262,8 @@
 
 <blockquote>
   <p>사람들은 처자를 이끌고 손에 넣었던 벼[稻]를 빻아서 60곡의 쌀[米]을 얻었다.
-[率妻子舂所取稻得六十斛米]</p>
-
-  <p>— 《삼국지》 오지15 〈종리목전〉.</p>
+[率妻子舂所取稻得六十斛米]
+<cite> 《삼국지》 오지15 〈종리목전〉. </cite></p>
 </blockquote>
 
 <p>즉, 稻라는 종류의 곡물을 빻아서 껍질을 벗겨야 米가 되는 것입니다.</p>
@@ -279,18 +278,16 @@
 
 <blockquote>
   <p>죽은 사람의 입에 넣는 米는 임금의 경우 粱, 대부의 경우 稷, 사의 경우 粱이다.
-[米，君以粱，大夫稷，士粱]</p>
-
-  <p>— 《통전》 예44 〈함〉.</p>
+[米，君以粱，大夫稷，士粱]
+<cite> 《통전》 예44 〈함〉. </cite></p>
 </blockquote>
 
 <p>또 《예문유취》 권85 〈백곡〉 편의 목차로 稻는 있지만 米는 없습니다. 그뿐만 아니라, 아래와 같이 곡식의 다섯 가지 변화 중 네 번째 단계로 米를 정의했습니다.</p>
 
 <blockquote>
   <p>《춘추설제사》에 따르면 곡식[粟]에는 다섯 가지 변화의 단계가 있다. 싹이 트면 苗(묘)가 되고, 이삭이 패면 禾(화)가 되고, 세 번째 변화로 제사를 지낼 때는 粟(속)이라고 부르며, 네 번째 변화는 米(미)라고 하고, 다섯 번째 변화로 쪄서 밥을 지으면 먹을 수 있다.
-[《春秋說題辭》曰：粟五變，生為苗，秀為禾，三變而祭謂之粟，四變曰米，五變而蒸飯可食。]</p>
-
-  <p>— 《예문유취》 권85 〈백곡〉.</p>
+[《春秋說題辭》曰：粟五變，生為苗，秀為禾，三變而祭謂之粟，四變曰米，五變而蒸飯可食。]
+<cite> 《예문유취》 권85 〈백곡〉. </cite></p>
 </blockquote>
 
 <p>그러므로 <a href="https://x.com/Kasis_Quauda/status/1587254562842255361">오두미도의 ‘미’를 볍쌀로 한정할 이유가 없습니다.</a> 오두미도에서는 볍쌀이 아니라 도정된 곡물을 받았던 것입니다. 米는 도정하기 전의 粟과 구별됩니다.  아마도 창고에 오래 저장할 곡물이 아니라 바로 밥을 지어 먹을 수 있는 곡물을 받고자 한 것이 아닐까요?</p>
