deploy: zya-han/zya-han.github.io-private@a7bfd9475c4f798a8ab4cbb50a2d8bcb1f0a7b80

--- a/bronze-characters/index.html
+++ b/bronze-characters/index.html
@@ -271,9 +271,8 @@
 <p><img src="/assets/images/qin-vessel.jpg" alt="qin-vessel" /></p>
 
 <blockquote>
-  <p>이 조문은 본디 반포한 표준기의 공증성을 보증할 목적으로 새긴 것인데, 표준기의 사용자와 담당관서가 그 조문을 읽고 인지할 것을 전제로 기록되었다고 보아도 좋다. 똑같은 용기라 할지라도 주술적·제사적 성격을 지닌 은나라와 주나라의 청동기 명문과 실용적·법제적 성격을 갖는 진나라의 조문 사이에는 분명한 차이가 있었던 것이다. 즉 은주 시대의 청동기 명문은 주로 청동기의 내면에 새겨져 있는 데 반해 진나라의 조문은 외면에 새겨져 있다.</p>
-
-  <p>— 도미야 이타루 지음. 임병덕 옮김. 《목간과 죽간으로 본 중국 고대 문화사》. 사계절. 2005.</p>
+  <p>이 조문은 본디 반포한 표준기의 공증성을 보증할 목적으로 새긴 것인데, 표준기의 사용자와 담당관서가 그 조문을 읽고 인지할 것을 전제로 기록되었다고 보아도 좋다. 똑같은 용기라 할지라도 주술적·제사적 성격을 지닌 은나라와 주나라의 청동기 명문과 실용적·법제적 성격을 갖는 진나라의 조문 사이에는 분명한 차이가 있었던 것이다. 즉 은주 시대의 청동기 명문은 주로 청동기의 내면에 새겨져 있는 데 반해 진나라의 조문은 외면에 새겨져 있다.
+<cite> 도미야 이타루 지음. 임병덕 옮김. 《목간과 죽간으로 본 중국 고대 문화사》. 사계절. 2005. </cite></p>
 </blockquote>
 
 <p>그리고 한나라로 오면 주나라 스타일과 진나라 스타일이 절충됩니다.</p>
