--- a/han-red-flag/index.html
+++ b/han-red-flag/index.html
@@ -247,9 +247,8 @@
 <p>중국 전국시대나 삼국시대 등을 배경으로 한 고장극에서는 군대의 깃발에 나라 이름이나 장수의 성을 커다랗게 쓴 것을 볼 수 있습니다. 이것은 거의 자명한 사실로 받아들여지고 있습니다. 그런데 이런 깃발의 모습이 과연 당시의 실제 상황에 부합했을까요? 송도진 번역의 《삼국지》 주석에 따르면 그렇지 않았다고 합니다.</p>
 
 <blockquote>
-  <p>역사서에 따르면 이 당시 작전에 사용한 깃발은 글씨를 쓰지 않고 색깔로 표시했는데 흔히 볼 수 있는 것은 오색 깃발이었다. … 깃발에 커다랗게 글씨를 쓰는 것은 남송(南宋) 초기 소설에 비로소 등장한다.</p>
-
-  <p>— 송도진 (2019). 《삼국지 1: 정사 비교 고증 완역판》. 글항아리. <a href="http://geulhangari.com/archives/6454">http://geulhangari.com/archives/6454</a></p>
+  <p>역사서에 따르면 이 당시 작전에 사용한 깃발은 글씨를 쓰지 않고 색깔로 표시했는데 흔히 볼 수 있는 것은 오색 깃발이었다. … 깃발에 커다랗게 글씨를 쓰는 것은 남송(南宋) 초기 소설에 비로소 등장한다.
+<cite> 송도진 (2019). 《[삼국지 1: 정사 비교 고증 완역판]((http://geulhangari.com/archives/6454)》. 글항아리. </cite></p>
 </blockquote>
 
 <p>즉, 한나라를 대표하는 깃발이라고 해서 漢(한)이라는 글자를 썼으리라는 보장이 없습니다.</p>
@@ -259,9 +258,8 @@
 <p>그렇다면 한나라의 상징은 깃발에 어떻게 나타났을까요? 《사기》 〈회흠후열전〉에서 단서를 찾을 수 있습니다. 한신이 조나라를 치면서 군대에 내린 명령을 살펴봅시다.</p>
 
 <blockquote>
-  <p>조나라 깃발을 뽑고 <span style="color:red">한나라의 붉은 깃발</span>을 세워라. [拔趙幟，立<span style="color:red">漢赤幟</span>。]</p>
-
-  <p>— 《사기》 〈회흠후열전〉.</p>
+  <p>조나라 깃발을 뽑고 <span style="color:red">한나라의 붉은 깃발</span>을 세워라. [拔趙幟，立<span style="color:red">漢赤幟</span>。]
+<cite> 《사기》 〈회흠후열전〉. </cite></p>
 </blockquote>
 
 <p>조나라 깃발의 색깔이나 무늬는 알 수 없지만, 적어도 한나라 깃발은 붉은색이었다는 것을 알 수 있습니다.</p>
@@ -279,7 +277,7 @@
 <blockquote>
   <p>문하성이 아뢰기를, “삼가 옛 책을 상고하건대, 극(戟)의 제도는 창처럼 두 가닥으로 되어 그 끝에 칼을 꽂는데 <span style="color:blue">위 무제(魏武帝)의 문에 세운 극은 두꺼비 머리를 써서 기를 달며 깃발의 길이는 1장 2척이고 청색과 황색이 섞였다 하였습니다</span>. 그런데 지금 궁전과 태묘의 문에 세운 극은 모두 귀신의 얼굴을 그려 실로 근거가 없으니, 옛 제도를 따라 두꺼비 머리로 고쳐 그리게 하소서.” 하니, 따랐다.</p>
 
-  <p>—  《고려사절요》 제4권 〈문종 인효대왕 1〉 <a href="https://db.itkc.or.kr/dir/nodeViewPop?dataId=ITKC_BT_1294A_0050_030_0020">https://db.itkc.or.kr/dir/nodeViewPop?dataId=ITKC_BT_1294A_0050_030_0020</a></p>
+  <p><cite>  《고려사절요》 제4권 〈<a href="https://db.itkc.or.kr/dir/nodeViewPop?dataId=ITKC_BT_1294A_0050_030_0020">문종 인효대왕 1</a>〉</cite></p>
 </blockquote>
 
 <p>1장 2척이면 오늘날의 단위로 3미터에 가깝습니다. 궁전의 문에 세운 깃발이 3미터에 달했다면, 군대에서 선봉에 세운 깃발은 아마 더 길지 않았을까 합니다.</p>
