--- a/mad-women/index.html
+++ b/mad-women/index.html
@@ -243,9 +243,8 @@
                 <p>광녀(狂女)란 한자 그대로 풀이하면 ‘미친 여자’라는 뜻입니다. 한자문화권에서 이 말이 최초로 발견되는 문헌은 바로 《한서》입니다. 〈왕망전 중〉에는 신나라를 세우고 황제가 된 왕망을 비난하는 ‘미친 여자’가 등장합니다.</p>
 
 <blockquote>
-  <p>이 해에 장안의 <strong>미친 여자[狂女子]</strong> 벽(碧)이 길에서 소리쳤다. “고황제[유방]께서 크게 노하셔서 내 나라를 돌려달라고 하셨다. 돌려주지 않는다면 9월에 너를 죽일 것이다!” 왕망은 그를 잡아 죽였다.</p>
-
-  <p>— 《한서》 〈왕망전 중〉.</p>
+  <p>이 해에 장안의 <strong>미친 여자[狂女子]</strong> 벽(碧)이 길에서 소리쳤다. “고황제[유방]께서 크게 노하셔서 내 나라를 돌려달라고 하셨다. 돌려주지 않는다면 9월에 너를 죽일 것이다!” 왕망은 그를 잡아 죽였다.
+<cite> 《한서》 〈왕망전 중〉. </cite></p>
 </blockquote>
 
 <p>이렇게 사회의 불안이 도래했음을 외치는 여자를 ‘광녀’로 기록한 사례를 찾을 수 있습니다. ‘광녀’를 주술사인 무녀(巫女)로 해석하는 설도 있다고 합니다(하라 모토코, 《<a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=329899755">환경으로 보는 고대 중국</a>》, 243면).</p>
