--- a/wansui-and-qiansui/index.html
+++ b/wansui-and-qiansui/index.html
@@ -246,9 +246,8 @@
 <!--more--></p>
 
 <blockquote>
-  <p>배천 군수 전봉훈의 초청을 받았다. 읍에 못 미쳐 오리정에 군내 각 면의 주민들이 나와서 등대하다가 내가 당도한즉 군수가 선창으로, “김구 선생 만세!”를 부르니 일동이 화하여 부른다. 나는 경황실색하여 손으로 군수의 입을 막으며 그것이 망발인 것을 말하였다. <strong>만세라는 것은 오직 황제에 대하여서만 부르는 것이요, 황태자도 천세라고밖에 못 부르는 것이 옛 법이기 때문이다.</strong> 그런 것을 일개 서민인 내게 만세를 부르니 내가 경황하지 아니할 수 없었다. 그러나 군수는 웃으며 내 손을 잡고 <strong>개화시대에는 친구 송영에도 만세를 부르는 법이니</strong> 안심하라고 하였다.</p>
-
-  <p>— 김구. (1947). 〈<a href="https://ko.wikisource.org/wiki/%EB%B0%B1%EB%B2%94%EC%9D%BC%EC%A7%80#%EB%AF%BC%EC%A1%B1%EC%97%90_%EB%82%B4%EB%86%93%EC%9D%80_%EB%AA%B8">민족에 내놓은 몸</a>〉. 《백범일지 상》.</p>
+  <p>배천 군수 전봉훈의 초청을 받았다. 읍에 못 미쳐 오리정에 군내 각 면의 주민들이 나와서 등대하다가 내가 당도한즉 군수가 선창으로, “김구 선생 만세!”를 부르니 일동이 화하여 부른다. 나는 경황실색하여 손으로 군수의 입을 막으며 그것이 망발인 것을 말하였다. <strong>만세라는 것은 오직 황제에 대하여서만 부르는 것이요, 황태자도 천세라고밖에 못 부르는 것이 옛 법이기 때문이다.</strong> 그런 것을 일개 서민인 내게 만세를 부르니 내가 경황하지 아니할 수 없었다. 그러나 군수는 웃으며 내 손을 잡고 <strong>개화시대에는 친구 송영에도 만세를 부르는 법이니</strong> 안심하라고 하였다.
+<cite> 김구. (1947). 〈<a href="https://ko.wikisource.org/wiki/%EB%B0%B1%EB%B2%94%EC%9D%BC%EC%A7%80#%EB%AF%BC%EC%A1%B1%EC%97%90_%EB%82%B4%EB%86%93%EC%9D%80_%EB%AA%B8">민족에 내놓은 몸</a>〉. 《백범일지 상》. </cite></p>
 </blockquote>
 
 <p>여기서 주목할 점은 만세(萬歲)와 천세(千歲)의 차이입니다. 중국의 역사서에서는 ‘천세’라는 말을 많이 찾아보기 어렵습니다. 반면 《조선왕조실록》에는 ‘천세’가 수백 회 나옵니다. 중국에서 황제의 관료들이 만세를 불렀다면, 조선에서 왕의 관료들은 천세를 불렀고, 조선이 대한제국이 되면서 비로소 군주에게 만세를 썼던 것입니다.</p>
