--- a/how-xun-yu-died/index.html
+++ b/how-xun-yu-died/index.html
@@ -245,9 +245,8 @@
 <p>한편, “정사”에 따르면 순욱이 “병사”했다는 주장도 많이 보입니다. 정말일까요? “정사”를 살펴봅시다.</p>
 
 <blockquote>
-  <p>순욱은 병이 들어 수춘에 머무르다가 근심으로 인해 죽었다. [彧疾留壽春，以憂薨]</p>
-
-  <p>— 《삼국지》 위지10 〈순욱전〉</p>
+  <p>순욱은 병이 들어 수춘에 머무르다가 근심으로 인해 죽었다. [彧疾留壽春，以憂薨]
+<cite> 《삼국지》 위지10 〈순욱전〉 </cite></p>
 </blockquote>
 
 <p>위 문장을 보면 순욱이 수춘에 머무른 까닭은 병이 들었기 때문이고[疾留壽春], 죽은 까닭은 근심 때문입니다[以憂薨]. 두 가지가 명확하게 구별됩니다. 즉, “정사”에 정말로 충실하고자 한다면, 순욱의 사인은 병이 아니라 근심이라고 말해야 합니다. “정사”를 말하면서 순욱이 병사했다고 말하는 것은, “병으로 수춘에 머무르다가 사고로 죽었다.”라는 문장을 읽고 병사라고 주장하는 것과 마찬가지입니다. 이것은 “정사”를 말하기를 좋아하는 사람들이 정작 역사서에서 “근심으로 인해” 죽었다는 말이 어떤 의미와 용례로 쓰였는지를 모르기 때문에 나온 오류입니다.</p>
@@ -255,27 +254,23 @@
 <p>역사책 《삼국지》의 본문과 배송지 주석에서 근심으로 인해[以憂] 죽었다는 서술을 모두 찾아봅시다. 순욱의 죽음을 제외하면 모두 네 건이 있습니다.</p>
 
 <blockquote>
-  <p>명제가 즉위한 뒤 견후의 죽음을 추모하고 애통해하자, 태후는 근심으로 인해 갑자기 죽었다. [明帝旣嗣立，追痛甄后之薨，故太后以憂暴崩]</p>
-
-  <p>— 위지5 〈문덕곽황후전〉 주석 《위략》.</p>
+  <p>명제가 즉위한 뒤 견후의 죽음을 추모하고 애통해하자, 태후는 근심으로 인해 갑자기 죽었다. [明帝旣嗣立，追痛甄后之薨，故太后以憂暴崩]
+<cite> 위지5 〈문덕곽황후전〉 주석 《위략》. </cite></p>
 </blockquote>
 
 <blockquote>
-  <p>태후는 영락태후를 핍박하여 근심으로 인해 죽게 만들었다. [太后逼迫永樂太后，令以憂死]</p>
-
-  <p>— 위지6 〈동탁전〉 주석 《헌제기》.</p>
+  <p>태후는 영락태후를 핍박하여 근심으로 인해 죽게 만들었다. [太后逼迫永樂太后，令以憂死]
+<cite> 위지6 〈동탁전〉 주석 《헌제기》. </cite></p>
 </blockquote>
 
 <blockquote>
-  <p>유엽은 마침내 광증이 생겨 외조로 나가 대홍려가 되었다가 근심으로 인해 죽었다. [曄遂發狂，出為大鴻臚，以憂死]</p>
-
-  <p>— 위지14 〈유엽전〉 주석 《부자》.</p>
+  <p>유엽은 마침내 광증이 생겨 외조로 나가 대홍려가 되었다가 근심으로 인해 죽었다. [曄遂發狂，出為大鴻臚，以憂死]
+<cite> 위지14 〈유엽전〉 주석 《부자》. </cite></p>
 </blockquote>
 
 <blockquote>
-  <p>그래서 손권이 심하게 노하여 책망하자 근심으로 인해 죽었다. [由是權深責怒，以憂死]</p>
-
-  <p>— 오지5 〈오주권왕부인전〉 본문.</p>
+  <p>그래서 손권이 심하게 노하여 책망하자 근심으로 인해 죽었다. [由是權深責怒，以憂死]
+<cite> 오지5 〈오주권왕부인전〉 본문. </cite></p>
 </blockquote>
 
 <p>이 네 건을 보면 모두 해당 인물이 쫓겨나거나 핍박을 받은 상태에서 석연치 않은 이유로 죽었다는 것을 알 수 있습니다. 특히 네 건 중 세 건이 문덕황후 곽씨, 영사황후 하씨, 손권의 부인 왕씨로 후궁의 권력 다툼과 연관된 사건을 가리키고 있습니다. 이것은 단순히 《삼국지》뿐만이 아니라 일찍이 《사기》에서부터 《한서》와 《후한서》로 이어져 온 특징입니다.</p>
