deploy: zya-han/zya-han.github.io-private@b46e3cf87a7a15f8c834a2e21433ce89bc85de65

--- a/anong/index.html
+++ b/anong/index.html
@@ -245,13 +245,10 @@
 <p>남조 양나라 사람 진경지가 북조 북위에 사자로 갔다가 술에 취해서 북위를 비하하는 발언을 하자, 중원의 명문 사족 양원신이 이를 반박하는 사건이 일어났습니다. 며칠 뒤 진경지가 병으로 앓아 눕자 양원신이 그의 병을 고쳐 주겠다고 방문합니다. 양원신은 입에 물을 머금고 진경지에게 뿜으며 귀신을 쫓아내는 주문을 읊습니다.</p>
 
 <blockquote>
-  <p>오나라 사람의 귀신이여, 건강(建康)에 붙어서 사는구나. [吳人之鬼，住居建康。]</p>
-
-  <p>관이며 모자며 자그맣고, 만드는 옷들은 짤막하다. [小作冠帽，短製衣裳。]</p>
-
-  <p>자기를 부르길 아농(阿儂)이며, 말하는 족족이 아방(阿傍)이라. [自呼阿儂，語則阿傍。]</p>
-
-  <p>줄풀과 피[稗]로써 밥을 짓고, 차를 마시고 장(漿)을 만든다. [菰稗為飯，茗飲作漿。]</p>
+  <p>오나라 사람의 귀신이여, 건강(建康)에 붙어서 사는구나. [吳人之鬼，住居建康。]<br />
+관이며 모자며 자그맣고, 만드는 옷들은 짤막하다. [小作冠帽，短製衣裳。]<br />
+자기를 부르길 아농(阿儂)이며, 말하는 족족이 아방(阿傍)이라. [自呼阿儂，語則阿傍。]<br />
+줄풀과 피[稗]로써 밥을 짓고, 차를 마시고 장(漿)을 만든다. [菰稗為飯，茗飲作漿。] </p>
 </blockquote>
 
 <p>이것으로 끝내지 않고 양원신은 순챗국, 게 요리 등 남방의 음식을 나열하면서 강남의 문화를 마음껏 비하합니다. 여기서도 남방의 괴상한(?) 음식 중 차가 먼저 꼽혔습니다. 남조 사람들은 차를 어지간히 많이 마신 모양이고 북조 사람들은 그것을 어지간히 조롱한 모양입니다.</p>
@@ -269,13 +266,10 @@
 <p>마지막으로 원나라 사람 고덕기가 쓴 《<a href="https://ctext.org/wiki.pl?if=en&amp;chapter=941386">평강기사</a>》에 나오는 일화를 소개하겠습니다.</p>
 
 <blockquote>
-  <p>손님: (똑똑똑)</p>
-
-  <p>주인: 누구인강? [誰<strong>儂</strong>？]</p>
-
-  <p>손님: 나당. [我<strong>儂</strong>。]</p>
-
-  <p>주인: (문을 열고) 너였구낭! [卻是你<strong>儂</strong>。]</p>
+  <p>손님: (똑똑똑) <br />
+주인: 누구인강? [誰**儂**？] <br />
+손님: 나당. [我**儂**。] <br />
+주인: (문을 열고) 너였구낭! [卻是你**儂**。] </p>
 </blockquote>
 
 <p>(오늘날의 상하이 일부에 해당하는) 바닷가 마을에서는 이렇게 “나”, “너”, “누구” 등 온갖 인칭대명사에 농(儂)을 붙여 써서, 타 지역 사람들이 이 마을을 3농의 땅[三儂之地]이라고 불렀다고 합니다. 농(儂)을 쓰는 사람들을 조롱하는 풍습은 이렇게 양나라부터 원나라까지 천 년을 이어진 것입니당…</p>
