--- a/dogs-in-later-han/index.html
+++ b/dogs-in-later-han/index.html
@@ -264,11 +264,13 @@
 
 <p>한편 후한 말의 학자 허신은 《설문해자》에서 당시 사용되던 한자를 부수별로 집대성했는데, 이 책의 〈견부〉에는 개[犬]에 관한 한자가 87개나 들어 있습니다. 그중에서 개의 외견과 관련된 한자를 몇 개 뽑아 보면 다음과 같습니다.</p>
 
-<ul>
-  <li>尨(방): 개 중에서 털이 많은 놈.</li>
-  <li>猲(갈): 주둥이가 짧은 개.</li>
-  <li>猈(패): 목이 짧은 개.</li>
-</ul>
+<blockquote>
+  <ul>
+    <li>尨(방): 개 중에서 털이 많은 놈.</li>
+    <li>猲(갈): 주둥이가 짧은 개.</li>
+    <li>猈(패): 목이 짧은 개.</li>
+  </ul>
+</blockquote>
 
 <p>이런 묘사는 개별 개의 특징일 수도 있지만, 견종 자체의 속성으로 볼 수도 있겠습니다.</p>
 
