--- a/interpret-and-translate/index.html
+++ b/interpret-and-translate/index.html
@@ -250,10 +250,12 @@
 
 <p>물론 한자문화권에서 이런 차이를 인지하지 못해서 역(譯)이라는 말을 쓰는 것은 아닙니다. 국립국어원 《표준국어대사전》에서 ‘통역’과 ‘번역’을 찾아봅시다.</p>
 
-<ul>
-  <li>통역: 말이 통하지 아니하는 <strong>사람 사이에서</strong> 뜻이 통하도록 말을 옮겨 줌.</li>
-  <li>번역: 어떤 언어로 된 글을 <strong>다른 언어의 글로</strong> 옮김.</li>
-</ul>
+<blockquote>
+  <ul>
+    <li>통역: 말이 통하지 아니하는 <strong>사람 사이에서</strong> 뜻이 통하도록 말을 옮겨 줌.</li>
+    <li>번역: 어떤 언어로 된 글을 <strong>다른 언어의 글로</strong> 옮김.</li>
+  </ul>
+</blockquote>
 
 <p>이렇게 뜻풀이를 보면 통역의 상호성(‘사람 사이에서’)과 번역의 방향성(‘다른 언어의 글로’)을 모두 포착하고 있습니다. 다만 방향의 차이보다는 언어를 옮긴다는 공통점을 더 중시한 것입니다.</p>
 
@@ -266,21 +268,22 @@
 <p>주목할 점은 譯(역)이라는 말이 처음부터 interpret나 translate에 완전히 대응하지는 않았다는 것입니다. 적어도 진한 시대 지식인들은 그렇게 믿었습니다. 이 사실은 《여씨춘추》와 《예기》에서 확인할 수 있습니다.</p>
 
 <blockquote>
-  <p>일반적으로 관을 쓰고 띠를 두르는 나라에서 배나 수레로 소통할 때는 <strong>상역적제</strong>를 쓰지 않고[凡冠帶之國，舟車之所通，不用<strong>象譯狄鞮</strong>]</p>
-
-  <p>— 《여씨춘추》 〈신세〉</p>
+  <p> 일반적으로 관을 쓰고 띠를 두르는 나라에서 배나 수레로 소통할 때는 **상역적제**를 쓰지 않고[凡冠帶之國，舟車之所通，不用**象譯狄鞮**] </p>
+  <p><cite> 《여씨춘추》 〈신세〉  </cite></p>
 </blockquote>
 
 <p>먼저 《여씨춘추》에 따르면 중화에 속하는 나라들끼리 소통할 때는 ‘상역적제’(象譯狄鞮)를 쓰지 않는다고 했는데, 이것은 상(象), 역(譯), 적제(狄鞮) 세 요소를 나열한 것입니다. 즉, 역이 단독으로 쓰이지 않고 상 및 적제와 함께 나왔습니다.</p>
 
 <p>상과 적제의 정체는 《예기》에 나옵니다. 고대 중국에서 동서남북 사방의 “오랑캐”를 각기 다른 명칭으로 불렀다는 이야기를 들어보신 분들도 계실 것입니다. 이 이야기의 출처가 바로 《예기》 〈왕제〉 편입니다. 〈왕제〉에서는 더 나아가서 민족의 명칭뿐만 아니라 통역관의 직책명도 방위에 따라 구별했습니다.</p>
 
-<ul>
-  <li>동쪽: 이(夷) / 기(寄)</li>
-  <li>남쪽: 만(蠻) / 상(象)</li>
-  <li>서쪽: 융(戎) / 적제(狄鞮)</li>
-  <li>북쪽: 적(狄) / 역(譯)</li>
-</ul>
+<blockquote>
+  <ul>
+    <li>동쪽: 이(夷) / 기(寄)</li>
+    <li>남쪽: 만(蠻) / 상(象)</li>
+    <li>서쪽: 융(戎) / 적제(狄鞮)</li>
+    <li>북쪽: 적(狄) / 역(譯)</li>
+  </ul>
+</blockquote>
 
 <p>다시 말해 역(譯)은 원래 보편적인 통역이나 번역이 아니라 중국 북쪽의 외국과 소통하는 것을 의미했습니다. 《여씨춘추》와 《예기》는 일반론이자 규범이므로 구체적인 상황에서 저렇게 사용했다는 증거가 되기는 어렵지만, 어쨌든 지식인들의 관념상으로는 지역에 따라 의사소통의 명칭이 달랐습니다.</p>
 
@@ -291,9 +294,8 @@
 <p>이 변화는 후한 말의 사전 《설문해자》에서도 확실하게 나타납니다.</p>
 
 <blockquote>
-  <p>‘역’이란 사방 오랑캐의 말을 전하는 자다. [譯：傳譯四夷之言者。]</p>
-
-  <p>— 《설문해자》 권4 〈언부〉</p>
+  <p> ‘역’이란 사방 오랑캐의 말을 전하는 자다. [譯：傳譯四夷之言者。]</p>
+  <p><cite> 《설문해자》 권4 〈언부〉 </cite></p>
 </blockquote>
 
 <p>앞선 《여씨춘추》나 《예기》와 달리 《설문해자》에서 ‘역’은 북쪽에 국한되지 않고 모든 ‘오랑캐’의 말을 전달하는 것이 되었습니다. 읽는 ‘오랑캐’가 기분이 나쁩니다. 아무튼 이 경우 ‘역’은 문자로 적힌 글을 옮기는 번역이라기보다 중국어와 외국어 사이에서 말을 옮기는 통역이었을 것입니다.</p>
