--- a/page6/index.html
+++ b/page6/index.html
@@ -191,7 +191,7 @@
                 <a class="text-dark" href="/yang-as-deceit/">양동작전의 수수께끼: 중국 고대의 음양 개념 변천</a>
                 
             </h2>
-            <h4 class="card-text">최근 트위터에서 마사토끼 님의 만화를 보고 찔렸습니다. “이쪽인 것처럼 해 놓고 저쪽에서 공격한다, 이런 기만 전술을 [양동작전]이라고 하죠. … 기만전술을 일컫는 명칭에 어떻게 陽자를 붙입니까?” https://twitter.com/masatokki/status/1763446972013568096 사실 아(雅)도 ‘양동작전’의 ‘양’이...</h4>
+            <h4 class="card-text">최근 트위터에서 마사토끼 님의 만화를 보고 찔렸습니다. 이쪽인 것처럼 해 놓고 저쪽에서 공격한다, 이런 기만 전술을 [양동작전]이라고 하죠. … **기만전술을 일컫는 명칭에 어떻게 陽자를 붙입니까?** https://twitter.com/masatokki/status/1763446972013568096 사실 아(雅)도 ‘양동작전’의 ‘양’이...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
@@ -295,7 +295,7 @@
                 <a class="text-dark" href="/brothers-are-hands/">형제는 손발, 처자는 의복?: “연의”가 진짜로 “왜곡”한 것</a>
                 
             </h2>
-            <h4 class="card-text">소설 《삼국연의》에서 중요한 주제 중 하나는 유비·관우·장비 사이의 의리입니다. 특히 유비의 대사로 다음과 같은 말이 유명합니다. “형제는 손발과 같고, 처자는 의복과 같다.” [兄弟如手足，妻子如衣服。] — 《삼국연의》 15회 이 대사는 장비가 술에...</h4>
+            <h4 class="card-text">소설 《삼국연의》에서 중요한 주제 중 하나는 유비·관우·장비 사이의 의리입니다. 특히 유비의 대사로 다음과 같은 말이 유명합니다. 형제는 손발과 같고, 처자는 의복과 같다. [兄弟如手足，妻子如衣服。] 《삼국연의》 15회 이 대사는 장비가 술에 취해...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
