--- a/sanguo-yanyi-07/index.html
+++ b/sanguo-yanyi-07/index.html
@@ -245,8 +245,7 @@
 <p>이런 각색은 연의에서 제갈량이 처음으로 등장하는 삼고초려 이벤트에서도 나타납니다. 보통 삼고초려라고 하면 유비가 제갈량을 극진히 받들어 모시는 모습을 상상할 것입니다. 바로 이런 이미지가 연의에서 창조된 것입니다. 《삼국지통속연의》 <a href="https://ctext.org/sanguo-yanyi/ch38#n98305">제38회</a>에서 유비가 제갈량을 어렵게 대면하고 처음으로 꺼낸 말을 들어 봅시다.</p>
 
 <blockquote>
-  <p>한나라 황실의 끄트머리에 속한 <strong>탁군 출신의 어리석은 남자</strong>가 오래 전부터 <strong>선생</strong>의 고명하신 존함을 듣고 천둥 소리처럼 귀가 뚫리는 것 같았습니다.
-[漢室末冑、<strong>涿郡愚夫</strong>，久聞<strong>先生</strong>大名，如雷貫耳。]</p>
+  <p> 한나라 황실의 끄트머리에 속한 **탁군 출신의 어리석은 남자**가 오래 전부터 **선생**의 고명하신 존함을 듣고 천둥 소리처럼 귀가 뚫리는 것 같았습니다. [漢室末冑、**涿郡愚夫**，久聞**先生**大名，如雷貫耳。] </p>
 </blockquote>
 
 <p>유비는 첫 만남부터 자기를 “탁군 출신의 어리석은 남자”로 낮추었습니다. 그리고는 대화 내내 자신을 이름으로 칭해서 낮추고 제갈량을 “선생”이라고 높여 부릅니다.</p>
@@ -254,8 +253,8 @@
 <p>그렇다면 정사에서는 유비가 제갈량을 만났을 때 무슨 말을 하고 무슨 호칭어를 썼을까요? 《삼국지》 촉지5 〈제갈량전〉의 <a href="https://ctext.org/text.pl?node=603498&amp;if=en#n603501">본문</a>에 나와 있습니다.</p>
 
 <blockquote>
-  <p><strong>고(孤)</strong>가 품성과 능력을 헤아려 보지도 않고 천하에 대의를 약속하고자 했는데 지혜가 얕고 책략이 모자란 탓에 결국 실패해서 오늘에 이르렀소. 하지만 마음에 품은 뜻이 아직 남아 있으니, <strong>군(君)</strong>께서는 앞으로 어떤 계획을 세워 주시겠소?
-[<strong>孤</strong>不度德量力，欲信大義於天下，而智術淺短，遂用猖獗，至于今日。然志猶未已，<strong>君</strong>謂計將安出？]</p>
+  <p> **고(孤)**가 품성과 능력을 헤아려 보지도 않고 천하에 대의를 약속하고자 했는데 지혜가 얕고 책략이 모자란 탓에 결국 실패해서 오늘에 이르렀소. 하지만 마음에 품은 뜻이 아직 남아 있으니, **군(君)**께서는 앞으로 어떤 계획을 세워 주시겠소?
+[**孤**不度德量力，欲信大義於天下，而智術淺短，遂用猖獗，至于今日。然志猶未已，**君**謂計將安出？] </p>
 </blockquote>
 
 <p>정사의 유비 역시 자신의 능력이 부족함을 인정하고 처음 만난 젊은 일반인에게 “군”이라는 존칭을 쓰는 등 상당히 정중한 태도를 취했지만, 연의와 달리 1인칭으로 “고”를 써서 자신이 군주의 위치에 있음을 분명히 못박았습니다. 제갈량을 스승으로 모신 것이 아니라 신하로서 예우한 것입니다.</p>
