--- a/two-versions-of-misogyny/index.html
+++ b/two-versions-of-misogyny/index.html
@@ -247,7 +247,7 @@
 <blockquote>
   <p>[남자는 우월하고 여자는 열등하다]</p>
 
-  <p>전제: 여자는 원래 남자보다 지성이 부족하다.</p>
+  <p>전제: 여자는 원래 남자보다 <strong>지성이 부족</strong>하다.</p>
 
   <p>결론: 그러므로 여자는 남자의 다스림을 받는 비천한 위치에 있어야 한다.</p>
 </blockquote>
@@ -263,7 +263,7 @@
 <blockquote>
   <p>[남자는 존귀하고 여자는 비천하다]</p>
 
-  <p>전제: 여자는 원래 남자보다 비천한 위치에 있다.</p>
+  <p>전제: 여자는 원래 남자보다 <strong>비천한 위치</strong>에 있다.</p>
 
   <p>결론: 그러므로 여자는 남자보다 지성이 부족해야/부족해도 된다.</p>
 </blockquote>
