--- a/yang-as-deceit/index.html
+++ b/yang-as-deceit/index.html
@@ -243,9 +243,8 @@
                 <p>최근 트위터에서 마사토끼 님의 만화를 보고 찔렸습니다.</p>
 
 <blockquote>
-  <p>“이쪽인 것처럼 해 놓고 저쪽에서 공격한다, 이런 기만 전술을 [양동작전]이라고 하죠. … <strong>기만전술을 일컫는 명칭에 어떻게 陽자를 붙입니까?</strong>”</p>
-
-  <p><a href="https://twitter.com/masatokki/status/1763446972013568096">https://twitter.com/masatokki/status/1763446972013568096</a></p>
+  <p> 이쪽인 것처럼 해 놓고 저쪽에서 공격한다, 이런 기만 전술을 [양동작전]이라고 하죠. … **기만전술을 일컫는 명칭에 어떻게 陽자를 붙입니까?** </p>
+  <p><cite><a href="https://twitter.com/masatokki/status/1763446972013568096">https://twitter.com/masatokki/status/1763446972013568096</a> </cite></p>
 </blockquote>
 
 <p>사실 아(雅)도 ‘양동작전’의 ‘양’이 兩이라고 생각했었거든요…</p>
