--- a/yuan-shao-as-a-lady/index.html
+++ b/yuan-shao-as-a-lady/index.html
@@ -269,7 +269,7 @@
 <p>아무튼 앞뒤 문맥을 더 살펴보면 아래와 같습니다.</p>
 
 <blockquote>
-  <p>袁本初公卿子弟，生處京師，<strong>體長婦人</strong>；張孟卓東平長者，坐不窺堂；孔公緒能清談高論，噓枯吹生，無軍帥之才，負霜露之勤；臨鋒履刃，決敵雌雄，皆非明公敵，三也。</p>
+  <p> 袁本初公卿子弟，生處京師，**體長婦人**；張孟卓東平長者，坐不窺堂；孔公緒能清談高論，噓枯吹生，無軍帥之才，負霜露之勤；臨鋒履刃，決敵雌雄，皆非明公敵，三也。 </p>
 </blockquote>
 
 <p>여기서는 반동탁연합을 대표하는 군벌들의 장단점을 나열하고 있고, “생처경사·체장부인”은 원소의 약점에 해당하는 내용입니다. 문제는… 후한 말의 배경에서는 1번 해석이나 2번 해석이나 둘 다 약점이 될 수 있다는 것입니다. 어느 쪽이든 원소가 충분히 남자답지 못하다는, 그래서 동탁의 적수가 될 수 없다는 인신공격입니다. 굳이 따지자면 1번이 더 그럴듯하다는 생각도 듭니다. 그 시대에 지배계급 아이들은 기본적으로 보모의 양육을 받았을 테니까, 2번의 해석대로 원소가 여자의 손에서 자랐다고 치더라도 그것이 그렇게까지 예외적인 일은 아니었을 것 같습니다.</p>
