--- a/wansui-and-qiansui/index.html
+++ b/wansui-and-qiansui/index.html
@@ -285,9 +285,8 @@
 <p>한국인으로서 가장 익숙한 만세 부르기를 꼽자면 역시 1919년 3·1 운동의 “대한 독립 만세!”입니다. 이때부터 일제는 조선인들이 만세를 부르는 것 자체를 불온하게 여긴 것 같습니다. 여기 대해서 한국종 변호사는 기쁠 때에도 만세를 부르므로 ‘만세’ 자체가 불온한 것은 아니라고 반박했습니다.</p>
 
 <blockquote>
-  <p>여학생들이 만세를 불렀다고 불온하다고 할 수 없다. 원래 ‘만세’란 감정의 발로이다. 삼일운동 때 ‘조선독립만세’ 또는 ‘만세’를 불렀다고 해서 보안법 위반이라고 하지만, ‘만세’가 반드시 조선 독립을 의미하는 것은 아니고 기쁠 때에도 만세를 부른다.</p>
-
-  <p>— 이상경. (2020). 〈1930년 서울 여학생 만세운동 연구: 여학생의 「신문조서」를 활용하여〉. 《여성과 역사》 33, 191–232. <a href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002665965">https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002665965</a></p>
+  <p>여학생들이 만세를 불렀다고 불온하다고 할 수 없다. 원래 ‘만세’란 감정의 발로이다. 삼일운동 때 ‘조선독립만세’ 또는 ‘만세’를 불렀다고 해서 보안법 위반이라고 하지만, ‘만세’가 반드시 조선 독립을 의미하는 것은 아니고 기쁠 때에도 만세를 부른다.
+<cite> 이상경. (2020). 〈<a href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002665965">1930년 서울 여학생 만세운동 연구: 여학생의 「신문조서」를 활용하여</a>〉. 《여성과 역사》 33, 191–232. </cite></p>
 </blockquote>
 
 <p>만세운동에 참여한 여학생들의 형량을 줄이기 위한 수단이기는 하지만, 뜻밖에 ‘만세’의 기원에 충실한 논리이기도 합니다.</p>
