deploy: zya-han/zya-han.github.io-private@4f981f79c92b8edd9fe5ad15645bef72b39dfadc

--- a/alcohol-and-sex/index.html
+++ b/alcohol-and-sex/index.html
@@ -249,8 +249,8 @@
 <p>우선 “기녀들이 술시중 드는 잔치”라고 하면, 대체로 기녀들이 평소에 관청이나 민간의 기방에 소속되어 있다가 연회가 생기면 불려 가서 흥을 돋우고 손님들의 시중을 드는 장면을 상상할 것 같습니다. 이런 형태라면 중국에서 대략 당·송 이후에 가능한 모습입니다. 적어도 위진 시대까지는 민간에서 운영하는 기루가 역사책에 좀처럼 드러나지 않습니다. 이 시기에 기녀가 존재하지 않았기 때문이 아니라, 기녀들이 부자의 사유물이었기 때문이었습니다. 즉, 기녀들의 술 시중을 받기 위해서는 부유한 권력자 본인이 되거나 부유한 권력자가 여는 연회에 손님으로 초대받거나 하는 수밖에 없었습니다. 바로 이런 점에서, 한나라에서 “주색”을 함께 즐기는 것이 사회 풍조를 이룰 만큼 퍼졌다고 단언하기는 어렵다고 한 것입니다.</p>
 
 <blockquote>
-  <p> 여성을 대동하여 음주, 가무를 즐기는 것이 한대 전구성원에게 하나의 사회 풍조를 이루었는지는 확언하기 어렵다. 이런 점은 위진 시대의 주색과 다른 점이라 여겨진다. </p>
-  <p><cite> 이수덕. (2005). 〈漢代 酒의 實像：술의 이용과 양조〉. 《중국사연구》 34, 7. </cite></p>
+  <p>여성을 대동하여 음주, 가무를 즐기는 것이 한대 전구성원에게 하나의 사회 풍조를 이루었는지는 확언하기 어렵다. 이런 점은 위진 시대의 주색과 다른 점이라 여겨진다.
+<cite> 이수덕. (2005). 〈漢代 酒의 實像：술의 이용과 양조〉. 《중국사연구》 34, 7. </cite></p>
 </blockquote>
 
 <p>사가에 속한 기녀들은 오늘날 가기(家妓)로 분류됩니다. “가기”라는 말은 당나라 이후에 나오지만, 이전 시대의 경우 기(伎), 창(倡), 후(謳), 여악(女樂) 등 명칭이 다양하므로 여기에서는 편의상 모두 가기로 쓰겠습니다. 가기의 존재 자체는 대체로 전국 시대부터 확인 가능합니다. 예를 들어 《사기》 〈여불위열전〉에서 여불위가 진나라 공자 자초에게 바친 조희는 여불위의 가기로 볼 수 있습니다.</p>
