--- a/brothers-are-hands/index.html
+++ b/brothers-are-hands/index.html
@@ -243,8 +243,8 @@
                 <p>소설 《삼국연의》에서 중요한 주제 중 하나는 유비·관우·장비 사이의 의리입니다. 특히 유비의 대사로 다음과 같은 말이 유명합니다.</p>
 
 <blockquote>
-  <p> 형제는 손발과 같고, 처자는 의복과 같다. [兄弟如手足，妻子如衣服。] </p>
-  <p><cite> 《삼국연의》 15회 </cite></p>
+  <p>형제는 손발과 같고, 처자는 의복과 같다. [兄弟如手足，妻子如衣服。]
+<cite> 《삼국연의》 15회 </cite></p>
 </blockquote>
 
 <p>이 대사는 장비가 술에 취해 서주성을 빼앗기고 유비의 아내를 잃은 죄를 자책하며 스스로 목숨을 끊으려는 것을 말리면서 나온 말입니다. 유비는 자기의 아내를 잃은 것은 의복이 해진 정도의 사소한 일이지만 의형제인 장비를 잃는 것은 손발이 끊어지는 것과 같은 중대한 일이라고 선언한 것입니다.</p>
@@ -260,8 +260,8 @@
 <p>돈황변문의 문장을 좀 더 자세히 살펴보겠습니다.</p>
 
 <blockquote>
-  <p> “형제는 손발과 같다. **부부는 의복과 같다.** [중략] 부모는 나무의 뿌리와 같다. 자손은 나무의 가지와 같다.”
-[兄弟如手足。**夫妻如衣服。**…父母如樹根。子孫如樹枝。] </p>
+  <p>형제는 손발과 같다. <strong>부부는 의복과 같다.</strong> [중략] 부모는 나무의 뿌리와 같다. 자손은 나무의 가지와 같다.
+[兄弟如手足。<strong>夫妻如衣服。</strong>…父母如樹根。子孫如樹枝。]</p>
 </blockquote>
 
 <p>여기서 “형제는 손발과 같다”[兄弟如手足]라는 말은 《삼국연의》 유비의 대사와 일치합니다. 그런데 다음 문장은 “부부는 의복과 같다”[夫妻如衣服]로 차이가 납니다. 처자식이 아닌 부부라는 점에 주목합시다. 즉, 남편이 아내를 의복으로 여기듯이 아내도 남편을 의복으로 여길 수 있다는 것입니다.</p>
@@ -269,9 +269,8 @@
 <p>고대 중국인들의 이런 인식은 좀 더 이른 시기로 올라가서 《사기》 〈정세가〉와 《춘추좌씨전》에 나오는 모녀의 대화에서도 확인할 수 있습니다. 아버지와 남편이 정적이 된 것을 알게 된 딸은 어머니에게 찾아가서 묻습니다.</p>
 
 <blockquote>
-  <p> 딸: 아버지와 남편 중 누가 더 가깝습니까? <br />
-어머니: 아버지는 하나뿐이지만 사람은 누구든 남편으로 삼을 수 있다. <p>
-</p></p>
+  <p>딸: 아버지와 남편 중 누가 더 가깝습니까? <br />
+어머니: 아버지는 하나뿐이지만 사람은 누구든 남편으로 삼을 수 있다.</p>
 </blockquote>
 
 <p>“아버지는 하나뿐이지만 남자는 누구든 남편이 될 수 있다.” 이 말을 들은 딸은 남편을 배신하고 아버지의 편을 들었습니다.</p>
@@ -283,8 +282,8 @@
 <p>이 왜곡은 단순히 《삼국연의》를 지은 나본 개인의 일탈이 아닙니다. 《삼국연의》보다 44년 이른 시기에 나온 《화관색전》에서는 더욱 심합니다. 여기에서는 관우와 장비가 도원결의를 위해 서로의 처자를 살해합니다.</p>
 
 <blockquote>
-  <p> 『新編全相說唱足本出身傳(前集)』은 화관색의 출현에 대한 이야기이다. 유비·관우·장비가 桃園結義를 할 때 관우와 장비에게는 이미 처자가 있었는데 **둘은 큰일을 도모하는데 가족이 장애가 될 수 있다고 판단하여 서로의 처자를 죽여주기로 한다.** </p>
-  <p><cite> 옥주. (2021). 〈<a href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002739795">『삼국지연의』와 관색고사의 영향 관계 고찰</a>〉. 《중국학》 75, 55면. </cite></p>
+  <p>『新編全相說唱足本出身傳(前集)』은 화관색의 출현에 대한 이야기이다. 유비·관우·장비가 桃園結義를 할 때 관우와 장비에게는 이미 처자가 있었는데 <strong>둘은 큰일을 도모하는데 가족이 장애가 될 수 있다고 판단하여 서로의 처자를 죽여주기로 한다.</strong>
+<cite> 옥주. (2021). 〈<a href="https://www.kci.go.kr/kciportal/ci/sereArticleSearch/ciSereArtiView.kci?sereArticleSearchBean.artiId=ART002739795">『삼국지연의』와 관색고사의 영향 관계 고찰</a>〉. 《중국학》 75, 55면. </cite></p>
 </blockquote>
 
 <p>즉, 고대 중국의 남자들이 소위 “대의”를 실현하기 위해 처자식을 방치하는 소극적인 정도였다면, 중세 이후에는 처자식을 “대의”의 걸림돌로 여기고 적극적으로 사전에 제거하기에 이른 것입니다. 이런 변화는 각 시대의 남성성에 대한 인식 및 가부장의 지위와 무관하지 않은 것 같습니다.</p>
