--- a/feather-fan/index.html
+++ b/feather-fan/index.html
@@ -251,11 +251,8 @@
 <p>결론부터 말하자면 《어림》이라는 책에서 제갈량이 깃털 부채를 가지고 등장하는 것이 현재 찾을 수 있는 가장 이른 기록입니다. 해당 본문을 살펴봅시다.</p>
 
 <blockquote>
-  <p>《語林》曰：<span style="color:red">諸葛武侯</span>與宣皇，在渭濱，將戰，宣皇戎服蒞事，使人視武侯，乘素輿，葛巾<strong>毛扇</strong>，指麾三軍，皆隨其進止。宣皇聞而歎曰：可謂名士矣。</p>
-</blockquote>
-
-<blockquote>
-  <p>《어림》에서 인용. <span style="color:red">제갈무후</span>와 선황이 위수 강변에서 전투를 벌이고자 할 때였다. 군복을 입고 사무를 보던 선황은 사람을 시켜 무후의 모습을 정찰하게 했다. 무후는 흰 수레를 타고 갈건과 <strong>깃털 부채</strong> 차림으로 전군을 지휘했고, 모두가 그의 명령을 따랐다. 선황이 이를 전해 듣고 감탄하였다. “명사라고 할 만하구나!”</p>
+  <p>《어림》에서 인용. <span style="color:red">제갈무후</span>와 선황이 위수 강변에서 전투를 벌이고자 할 때였다. 군복을 입고 사무를 보던 선황은 사람을 시켜 무후의 모습을 정찰하게 했다. 무후는 흰 수레를 타고 갈건과 <strong>깃털 부채</strong> 차림으로 전군을 지휘했고, 모두가 그의 명령을 따랐다. 선황이 이를 전해 듣고 감탄하였다. “명사라고 할 만하구나!” <br />
+《語林》曰：<span style="color:red">諸葛武侯</span>與宣皇，在渭濱，將戰，宣皇戎服蒞事，使人視武侯，乘素輿，葛巾<strong>毛扇</strong>，指麾三軍，皆隨其進止。宣皇聞而歎曰：可謂名士矣。</p>
 </blockquote>
 
 <p>위수 강변에서 전투를 벌이고 사마의가 제갈량을 정찰했다면 오장원에서의 일이 아닐까 추측해 봅니다. 그렇다면 제갈량의 마지막 북벌인 셈입니다. 북벌을 한두 번 하는 것도 아닌데 무장을 하지 않았다니 확실히 보통 사람은 아닙니다. 이런 모습을 보고 사마의가 ‘명사’라고 감탄한 것을 보면, 《삼국지》의 세계에서 명사들은 군복을 입고 무장을 갖추면 품격이 떨어진다고 여겨졌던 것 같습니다. 원소가 위험한 전장에서 투구를 안 썼다는 것도 같은 맥락이겠지요. 여기서 부채는 명사의 ‘가오’를 위한 아이템이라고 볼 수 있겠습니다.</p>
@@ -269,9 +266,8 @@
 <p>앞서 《어림》에서는 깃털 부채를 든 제갈량이 갈건을 썼었는데, 소식의 〈적벽회고: ‘염노교’ 곡조에 따라〉[念奴嬌赤壁懷古]에서는 주유가 깃털 부채를 들고 윤건을 쓴 채로 등장합니다.</p>
 
 <blockquote>
-  <p>遙想<span style="color:red">公瑾</span>當年，小喬初嫁了，雄姿英發。<strong>羽扇綸巾</strong>，談笑間、檣虜灰飛煙滅。</p>
-
-  <p>아득히 생각하니 그 해에 <span style="color:red">공근</span>은 소교가 갓 시집왔고 영웅의 풍모 드날렸겠네. <strong>깃털 부채 윤건</strong> 쓰고 담소하는 사이에 돛대도 적병도 연기가 되어 사라지누나.</p>
+  <p>아득히 생각하니 그 해에 <span style="color:red">공근</span>은 소교가 갓 시집왔고 영웅의 풍모 드날렸겠네. <strong>깃털 부채 윤건</strong> 쓰고 담소하는 사이에 돛대도 적병도 연기가 되어 사라지누나. <br />
+遙想<span style="color:red">公瑾</span>當年，小喬初嫁了，雄姿英發。<strong>羽扇綸巾</strong>，談笑間、檣虜灰飛煙滅。</p>
 </blockquote>
 
 <p>여기에서 깃털 부채와 윤건이 결합했다는 점에 주목해 봅시다. 이것은 《삼국연의》에서 제갈량의 모습을 묘사하는 상용구와 일치합니다. 즉, 《삼국연의》의 ‘우선윤건’은 《어림》의 기록보다는 〈적벽회고〉의 묘사에 더 가깝습니다. 그러므로 《삼국연의》에서 직접적으로 차용한 것은 〈적벽회고〉의 이미지일 수도 있습니다.</p>
@@ -297,15 +293,13 @@
 <p>나본의 《삼국연의》는 소설 《전상평화삼국지》(삼국지평화)와 희곡 《격강투지》 두 작품을 기반으로 했다고 알려져 있습니다. 우선 원대에 정립된 《<a href="https://ctext.org/wiki.pl?if=en&amp;res=875919">전상평화삼국지 지치신간</a>》에는 부채[扇]나 건[巾]이라는 말이 아예 나오지 않았으므로, 《양군사격강투지(두 군사가 장강을 사이에 두고 지혜를 다투다)》[兩軍師隔江鬥智]가 수록된 《<a href="https://ctext.org/wiki.pl?if=en&amp;res=311428">전원곡</a>》에서 검색해 보았습니다. 검색해 보니 깃털 부채 및 윤건이 나온 것은 《격강투지》 한 작품뿐이고, 여기서는 명백하게 제갈량의 아이템이었습니다.</p>
 
 <blockquote>
-  <p><strong>羽扇綸巾</strong>一<span style="color:red">孔明</span>。</p>
-
-  <p>깃털 부채에 윤건을 착용한 이가 있으니 곧 공명이라.</p>
+  <p>깃털 부채에 윤건을 착용한 이가 있으니 곧 공명이라. <br />
+<strong>羽扇綸巾</strong>一<span style="color:red">孔明</span>。</p>
 </blockquote>
 
 <blockquote>
-  <p>在軍中運籌決策，長則是<strong>羽扇綸巾</strong>。(제갈량의 대사)</p>
-
-  <p>군중에서 산가지를 가지고 책략을 세우고 항상 깃털 부채에 윤건을 착용하였다. (제갈량이 자기를 소개하는 대사)</p>
+  <p>군중에서 산가지를 가지고 책략을 세우고 항상 깃털 부채에 윤건을 착용하였다. (제갈량이 자기를 소개하는 대사) <br />
+在軍中運籌決策，長則是<strong>羽扇綸巾</strong>。(제갈량의 대사)</p>
 </blockquote>
 
 <p>‘우선윤건’의 이미지는 그대로인데, 해당하는 인물이 주유에서 제갈량으로 바뀐 것입니다. 어떻게 된 일일까요?</p>
