--- a/han-red-flag/index.html
+++ b/han-red-flag/index.html
@@ -248,7 +248,7 @@
 
 <blockquote>
   <p>역사서에 따르면 이 당시 작전에 사용한 깃발은 글씨를 쓰지 않고 색깔로 표시했는데 흔히 볼 수 있는 것은 오색 깃발이었다. … 깃발에 커다랗게 글씨를 쓰는 것은 남송(南宋) 초기 소설에 비로소 등장한다.
-<cite> 송도진 (2019). 《[삼국지 1: 정사 비교 고증 완역판]((http://geulhangari.com/archives/6454)》. 글항아리. </cite></p>
+<cite> 송도진 (2019). 《<a href="http://geulhangari.com/archives/6454">삼국지 1: 정사 비교 고증 완역판</a>》. 글항아리. </cite></p>
 </blockquote>
 
 <p>즉, 한나라를 대표하는 깃발이라고 해서 漢(한)이라는 글자를 썼으리라는 보장이 없습니다.</p>
