--- a/interpret-and-translate/index.html
+++ b/interpret-and-translate/index.html
@@ -294,8 +294,8 @@
 <p>이 변화는 후한 말의 사전 《설문해자》에서도 확실하게 나타납니다.</p>
 
 <blockquote>
-  <p> ‘역’이란 사방 오랑캐의 말을 전하는 자다. [譯：傳譯四夷之言者。]</p>
-  <p><cite> 《설문해자》 권4 〈언부〉 </cite></p>
+  <p>‘역’이란 사방 오랑캐의 말을 전하는 자다. [譯：傳譯四夷之言者。]
+<cite> 《설문해자》 권4 〈언부〉 </cite></p>
 </blockquote>
 
 <p>앞선 《여씨춘추》나 《예기》와 달리 《설문해자》에서 ‘역’은 북쪽에 국한되지 않고 모든 ‘오랑캐’의 말을 전달하는 것이 되었습니다. 읽는 ‘오랑캐’가 기분이 나쁩니다. 아무튼 이 경우 ‘역’은 문자로 적힌 글을 옮기는 번역이라기보다 중국어와 외국어 사이에서 말을 옮기는 통역이었을 것입니다.</p>
