--- a/jiuyunchunjiu/index.html
+++ b/jiuyunchunjiu/index.html
@@ -267,7 +267,8 @@
 <p>먼저 나무위키 문서의 2장 첫 번째 문단을 살펴봅시다.</p>
 
 <blockquote>
-  <p>조조가 헌제에게 바쳤다고 알려진 술로 제민요술이라는 책에 따르면 건안 연간에 헌제에게 이 술을 바치면서 만드는 법을 아뢰었는데, 그 내용은 자신의 고향인 남양에서 곽지가 만들었다고 하면서 술을 만드는 법이 나와있다. — <a href="https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18">https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18</a></p>
+  <p>조조가 헌제에게 바쳤다고 알려진 술로 제민요술이라는 책에 따르면 건안 연간에 헌제에게 이 술을 바치면서 만드는 법을 아뢰었는데, 그 내용은 자신의 고향인 남양에서 곽지가 만들었다고 하면서 술을 만드는 법이 나와있다.
+<span><a href="https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18">https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18</a></span></p>
 </blockquote>
 
 <p>가장 명백한 오류는 <a href="https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=1">리그베다 위키에서 2013년 2월 18일에 생성된 r1판</a>에서부터 이어지는 “자신의 고향인 남양에서 곽지가 만들었다고 하면서”입니다. 이 문장은 8년이 더 지난 현재까지 수많은 편집자를 거치면서 한 번도 수정된 적이 없습니다. 그런데 아<sup>雅</sup>가 알기로는 ‘臣縣故令南陽郭芝’에서 ‘縣’과 ‘故’의 순서를 바꾸고 그 뒤에 나오는 ‘令’을 지워야 이런 해석이 가능합니다. ‘臣縣故令’는 ‘신의 고향 현의 옛 [현]령’이 되어야 할 것입니다.</p>
@@ -281,7 +282,8 @@
 <p>두 번째 문단은 구온춘주를 빚는 방법입니다.</p>
 
 <blockquote>
-  <p>만들 때 누룩 <strong>20근</strong>을 흐르는 물 5섬에 쓰고 섣달 2일에 누룩을 담궜다가 정월에 해동하며, 좋은 쌀을 쓰고 누룩 찌꺼기에 잘 걸러낸다. 3일에 한 번씩 술밥을 넣으면서 <strong>아홉 번이 되면</strong> 그친다. — <a href="https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18">https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18</a></p>
+  <p>만들 때 누룩 <strong>20근</strong>을 흐르는 물 5섬에 쓰고 섣달 2일에 누룩을 담궜다가 정월에 해동하며, 좋은 쌀을 쓰고 누룩 찌꺼기에 잘 걸러낸다. 3일에 한 번씩 술밥을 넣으면서 <strong>아홉 번이 되면</strong> 그친다.
+<span> <a href="https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18">https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18</a> </span></p>
 </blockquote>
 
 <p>첫 번째 문제는 ‘누룩 20근’입니다. 나무위키뿐만 아니라 현재 한국어 웹에서 찾아볼 수 있는 구온춘주 관련 문서의 상당수가 누룩의 양을 20근으로 명시하고 있습니다. 그러나, 《제민요술》과 《전삼국문》에는 모두 ‘三十斤’으로 나옵니다. 판본의 차이일 수도 있으나 양조법에서 재료의 분량은 매우 중요하므로 특히 필사에 신경을 썼을 것이고, 적어도 아<sup>雅</sup>가 찾을 수 있는 한도 내에서는 ‘二十斤’이라고 적힌 문헌이 없었습니다. 20근은 아마 바이두 백과의 <a href="https://baike.baidu.com/item/%E4%B9%9D%E9%85%9D%E6%98%A5%E9%85%92/2455448">九酝春酒 문서</a>에서부터 잘못 퍼진 것 같습니다. 나무위키 문서의 첫 번째 문단에 “제민요술이라는 책에 따르면”이라고 적혀 있지만, 실제로 《제민요술》 본문을 확인하고 쓴 것은 아닌 듯합니다.</p>
@@ -301,7 +303,8 @@
 <p>나무위키 문서의 네 번째 문단에서는 흥미로운 주장을 소개하고 있습니다.</p>
 
 <blockquote>
-  <p>일각에는 조조가 좋은 술로 황제를 홀렸다는 주장도 있지만, 그 고장 사람들은 조조가 천자의 권세를 남용할 만큼 입지가 튼튼했기에 굳이 그럴 이유는 없으며, <strong>단지 고향의 술에 대한 애정이 깊었다고 주장한다</strong>. 사실 정사를 살펴보면 조조는 이미 하늘을 찌르는 권력의 소유자였기에 굳이 황제에게 술로 호감을 살 필요가 없었다고 보는 것이 합리적이다. 즉 역사상 뛰어난 시인으로서 면모나 손자병법의 주석을 다는등 병법가로서도 유명했던 조조의 다재다능함이 술 빚기까지 미쳤던 것뿐. — <a href="https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18">https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18</a></p>
+  <p>일각에는 조조가 좋은 술로 황제를 홀렸다는 주장도 있지만, 그 고장 사람들은 조조가 천자의 권세를 남용할 만큼 입지가 튼튼했기에 굳이 그럴 이유는 없으며, <strong>단지 고향의 술에 대한 애정이 깊었다고 주장한다</strong>. 사실 정사를 살펴보면 조조는 이미 하늘을 찌르는 권력의 소유자였기에 굳이 황제에게 술로 호감을 살 필요가 없었다고 보는 것이 합리적이다. 즉 역사상 뛰어난 시인으로서 면모나 손자병법의 주석을 다는등 병법가로서도 유명했던 조조의 다재다능함이 술 빚기까지 미쳤던 것뿐.
+<span><a href="https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18">https://namu.wiki/w/%EA%B5%AC%EC%98%A8%EC%B6%98%EC%A3%BC?rev=18</a> </span></p>
 </blockquote>
 
 <p>과연 조조가 자기 고향의 술에 대한 애정이 깊어서 황제에게까지 권한 것일까요? 다른 기록을 더 찾아서 확인해 보겠습니다.</p>
