--- a/sanguo-yanyi-03/index.html
+++ b/sanguo-yanyi-03/index.html
@@ -283,21 +283,15 @@
 <p>여기에서 진궁이 1인칭으로 이름[宮]을 쓰는 것은 살려도 좋을 것 같은데 나본 양반은 자기 설정을 고수합니다. 진궁이 조조에게 말할 때 자기를 낮추는 것을 절대로 허용할 수 없었나 봅니다.</p>
 
 <blockquote>
-  <p>조조: 오늘 일은 어떻게 되겠소?</p>
-</blockquote>
-
-<blockquote>
-  <p>진궁: (큰 소리로) 오늘은 죽으면 다 끝난다!</p>
+  <p>조조: 오늘 일은 어떻게 되겠소? <br />
+진궁: (큰 소리로) 오늘은 죽으면 다 끝난다!</p>
 </blockquote>
 
 <p>아니, 왜 고함을 지르고 그래요… 아들로서 불효하고 신하로서 불충했으니 죽는 것이 자기의 본분이라고 말하던 공손한 진궁은 연의에 없습니다.</p>
 
 <blockquote>
-  <p>조조: <strong>공</strong>이 그러시다면 <strong>공</strong>의 노모와 처자는 어찌하오?</p>
-</blockquote>
-
-<blockquote>
-  <p>진궁: <strong>내</strong>가 듣기로 효로 천하를 다스리는 자는 남의 부모를 해치지 않고 어진 정치를 천하에 베푸는 자는 남의 제사를 끊지 않는다고 하더이다.</p>
+  <p>조조: <strong>공</strong>이 그러시다면 <strong>공</strong>의 노모와 처자는 어찌하오? <br />
+진궁: <strong>내</strong>가 듣기로 효로 천하를 다스리는 자는 남의 부모를 해치지 않고 어진 정치를 천하에 베푸는 자는 남의 제사를 끊지 않는다고 하더이다.</p>
 </blockquote>
 
 <p>이렇게 연의에서 설정한 호칭어를 계속 쓰다가 갑자기…</p>
