--- a/seal-ribbons/index.html
+++ b/seal-ribbons/index.html
@@ -257,12 +257,14 @@
 
 <p>인수의 종류, 즉 도장의 재질과 끈의 색깔은 개인이 자기 취향에 따라 선택할 수 있는 것이 아니라 소유자의 신분에 따라 정해져 있었습니다. 예를 들어 황족이 아닌 제후 중 가장 높은 작위에 해당하는 열후는 “금인자수”에 해당합니다. 금으로 만든 도장을 보라색 끈으로 묶는다는 뜻입니다. 《한서》 〈백관공경표〉에는 작위와 관직에 따른 인수의 종류가 아래와 같이 나열되어 있습니다.</p>
 
-<ul>
-  <li>금인자수: 상국, 승상, 태위, 대사마, 태부, 태사, 전후좌우장군</li>
-  <li>은인청수: 어사대부, 중2000석, 2000석, 비2000석</li>
-  <li>동인흑수: 1000석 이하 비600석 이상</li>
-  <li>동인황수: 400석 이하 비200석 이상</li>
-</ul>
+<blockquote>
+  <ul>
+    <li>금인자수: 상국, 승상, 태위, 대사마, 태부, 태사, 전후좌우장군</li>
+    <li>은인청수: 어사대부, 중2000석, 2000석, 비2000석</li>
+    <li>동인흑수: 1000석 이하 비600석 이상</li>
+    <li>동인황수: 400석 이하 비200석 이상</li>
+  </ul>
+</blockquote>
 
 <p>여기에 따르면 후한 사람 순욱은 1000석급에 해당하는 상서령 벼슬을 지냈으므로 “동인흑수”에 해당합니다. 즉, 동으로 만든 도장을 검정색 끈의 끝에 달아서 허리에 찼을 것입니다.</p>
 
