--- a/ta-bom/index.html
+++ b/ta-bom/index.html
@@ -250,7 +250,7 @@
 
 <h3 id="1-엄지척-19세기-중국-소설에-등장하다">1. 엄지척, 19세기 중국 소설에 등장하다</h3>
 
-<p>동아시아에서 엄지손가락을 드는 동작의 유래를 찾기 위해 Chinese Text Project(CTP, https://ctext.org)를 뒤져 보았습니다. 일단 고전 한문에서 엄지를 가리키는 巨指(거지) 및 大指(대지), 그리고 근세 이후의 표현인 大拇指(대무지)로 검색해 보았지만 CTP에서 정식으로 제공하는 문헌에서는 엄지손가락을 올리는 동작을 묘사한 내용을 찾지 못했습니다.</p>
+<p>동아시아에서 엄지손가락을 드는 동작의 유래를 찾기 위해 <a href="https://ctext.org">Chinese Text Project(CTP)</a>를 뒤져 보았습니다. 일단 고전 한문에서 엄지를 가리키는 巨指(거지) 및 大指(대지), 그리고 근세 이후의 표현인 大拇指(대무지)로 검색해 보았지만 CTP에서 정식으로 제공하는 문헌에서는 엄지손가락을 올리는 동작을 묘사한 내용을 찾지 못했습니다.</p>
 
 <p>그래서 검색 대상을 넓혀 CTP 위키 섹션에 들어 있는 문헌까지 뒤져 보았더니 드디어 무엇인가를 찾을 수 있었습니다. 엄지를 언급하는 문장들을 하나하나 다 읽고 찾아낸 결과를 종합해 보면, 주로 청대 말기의 소설에서 엄지를 드는 동작이 나왔습니다. 이 가운데 가장 이른 것은 <strong>진삼(陳森)의 1837년 소설 《품화보감》(品花寶鑒)</strong>으로 추정됩니다. <a href="https://ctext.org/wiki.pl?chapter=775775">바로 이 소설의 제18회에서 등장인물이 엄지를 세우고[<strong>豎起大拇指</strong>] 상대를 칭찬했습니다.</a> 적어도 중국에서는 19세기 중반에 엄지척 동작이 쓰였던 것입니다.</p>
 
@@ -260,7 +260,7 @@
 
 <p>중국 소설에서 엄지척 동작이 19세기, 청나라 말기에 등장했다는 것을 알게 되었습니다. 하지만 뛰어난 인물을 엄지손가락에 비유하는 언어 습관은 더 이른 시기에도 찾을 수 있습니다. 엄지를 가리키는 또 다른 표현으로 巨擘(거벽)이 있습니다. 《맹자》 〈등문공 하〉 편에서 맹자는 “<a href="https://ctext.org/mengzi/teng-wen-gong-ii">제나라의 선비들 중에서는 진중자를 <strong>거벽</strong>이라고 해야 한다.</a>”라고 말했습니다. 즉, 최고로 뛰어난 인물을 엄지손가락에 비유하는 것은 무려 전국 시대까지 올라갈 수 있습니다.</p>
 
-<p>하지만 이 “거벽”이라는 말이 널리 퍼지지는 않았습니다. CTP에서 정식으로 제공하는 문헌에서 검색하면 맹자가 쓴 용례밖에 나오지 않습니다. 더 마이너한 문헌까지 찾아보기 위해 Scripta Sinica(https://hanchi.ihp.sinica.edu.tw/ihp/hanji.htm)로 가면, <strong>송나라 사람 이심전(李心傳, 1167–1243)의 저작 《건염이래조야잡기》(建炎以來朝野雜記)</strong>라는 책에 “역사가 중의 거벽”[<strong>史家之巨擘</strong>]이라는 표현이 나오는 것이 맹자를 제외한 가장 이른 시기의 용례입니다.</p>
+<p>하지만 이 “거벽”이라는 말이 널리 퍼지지는 않았습니다. CTP에서 정식으로 제공하는 문헌에서 검색하면 맹자가 쓴 용례밖에 나오지 않습니다. 더 마이너한 문헌까지 찾아보기 위해 <a href="https://hanchi.ihp.sinica.edu.tw/ihp/hanji.htm">Scripta Sinica</a>로 가면, <strong>송나라 사람 이심전(李心傳, 1167–1243)의 저작 《건염이래조야잡기》(建炎以來朝野雜記)</strong>라는 책에 “역사가 중의 거벽”[<strong>史家之巨擘</strong>]이라는 표현이 나오는 것이 맹자를 제외한 가장 이른 시기의 용례입니다.</p>
 
 <h3 id="3-결론">3. 결론</h3>
 
