--- a/white/index.html
+++ b/white/index.html
@@ -246,28 +246,30 @@
 
 <p>우선 한나라 사람들은 흰색을 어떻게 정의했을까요? (참고로 《표준국어대사전》에서는 ‘희다’를 “눈과 우유의 빛깔”로 정의합니다.) 《설문해자》에서는 白(백)을 “서방색”(西方色)으로 풀이했습니다. 이것은 오색(다섯 색깔)과 오방(다섯 방향)을 대응시킨 것입니다. 한나라 유교맨들이 오행(五行)을 중시했다는 것이 여기에서도 드러납니다. 일단 흰색을 정의한 다음에는 白이라는 부수를 가지는 한자를 나열했습니다. 하나하나 살펴봅시다.</p>
 
-<ul>
-  <li>皎(교): 달의 흰빛.
-    <ul>
-      <li>《시경》 〈진풍·월출〉에서 달빛을 묘사하는 데 쓰였습니다.</li>
-    </ul>
-  </li>
-  <li>皢(효): 해의 흰빛.
-    <ul>
-      <li>白 대신 日을 쓰는 曉(새벽 효)와 통하는 글자입니다.</li>
-    </ul>
-  </li>
-  <li>皙(석): 사람 얼굴의 흰빛.
-    <ul>
-      <li>《한서》 〈곽광전〉에서 곽광의 미모를 묘사하는 데 쓰였습니다.</li>
-    </ul>
-  </li>
-  <li>皤(파): 노인의 머리카락의 흰빛.</li>
-  <li>㿥(학): 새의 흰빛.</li>
-  <li>皚(애): 서리와 눈의 흰빛.</li>
-  <li>皅(파): 풀과 꽃의 흰빛.</li>
-  <li>皦(교): 옥과 돌의 흰빛.</li>
-</ul>
+<blockquote>
+  <ul>
+    <li>皎(교): 달의 흰빛.
+      <ul>
+        <li>《시경》 〈진풍·월출〉에서 달빛을 묘사하는 데 쓰였습니다.</li>
+      </ul>
+    </li>
+    <li>皢(효): 해의 흰빛.
+      <ul>
+        <li>白 대신 日을 쓰는 曉(새벽 효)와 통하는 글자입니다.</li>
+      </ul>
+    </li>
+    <li>皙(석): 사람 얼굴의 흰빛.
+      <ul>
+        <li>《한서》 〈곽광전〉에서 곽광의 미모를 묘사하는 데 쓰였습니다.</li>
+      </ul>
+    </li>
+    <li>皤(파): 노인의 머리카락의 흰빛.</li>
+    <li>㿥(학): 새의 흰빛.</li>
+    <li>皚(애): 서리와 눈의 흰빛.</li>
+    <li>皅(파): 풀과 꽃의 흰빛.</li>
+    <li>皦(교): 옥과 돌의 흰빛.</li>
+  </ul>
+</blockquote>
 
 <p>이렇게 대상에 따라 다른 서술어를 쓰는 만큼 섬세한 의미를 부여하기 좋고 현대의 창작물에서도 써먹기 편할 것 같습니다. 그나저나 중국어 사용자들도 소학교에서 한문의 다양한 색채어를 자랑스럽게 여기게 배웠겠죠…</p>
 
