--- a/xun-yu-s-extraordinary-appearance/index.html
+++ b/xun-yu-s-extraordinary-appearance/index.html
@@ -245,9 +245,9 @@
 <p>현대한국어에서도 ‘기이한 재주’와 같은 말은 종종 쓰지만, ‘기이한 용모’라고 하면 왠지 그렇게까지 긍정적으로 느껴지지 않습니다. 심지어 미남이라기보다는 부정적인 특징이 크게 두드러지는 외모를 연상하는 일도 있습니다. 실제로, 아래의 〈도겸전〉 주석을 읽고서 도겸을 미남이 아니라고 해석하는 경우도 본 적이 있습니다.</p>
 
 <blockquote>
-  <p> 그의 용모를 보고 **남다르게 여겨** 그를 불렀다. [見其容貌，**異**而呼之] </p>
-  <p> 그는 **겉모습이 기이하니** 자라면 반드시 성공할 것이다. [彼有**奇表**，長必大成。] </p>
-  <p><cite> 《삼국지》 위지8 〈도겸전〉 주석 《오서(吳書)》. </cite></p>
+  <p>그의 용모를 보고 <strong>남다르게 여겨</strong> 그를 불렀다. [見其容貌，<strong>異</strong>而呼之] <br />
+그는 <strong>겉모습이 기이하니</strong> 자라면 반드시 성공할 것이다. [彼有<strong>奇表</strong>，長必大成。]
+<cite> 《삼국지》 위지8 〈도겸전〉 주석 《오서(吳書)》. </cite></p>
 </blockquote>
 
 <p>하지만 《삼국지》의 맥락에서 외모를 형용하는 기(奇)와 이(異)는 현대한국어 사용자가 생각하는 ‘기이한 외모’와 어감이 다르다는 데 유의해야 합니다. 본문을 읽어보면 이 말들은 대부분의 경우 긍정적인 문맥에 쓰였습니다. 단적인 예로, 미소년으로 유명한 원소의 막내아들 원상에 대해서도 이 기(奇)가 사용되었습니다.</p>
