--- a/anong/index.html
+++ b/anong/index.html
@@ -248,7 +248,7 @@
   <p>오나라 사람의 귀신이여, 건강(建康)에 붙어서 사는구나. [吳人之鬼，住居建康。]<br />
 관이며 모자며 자그맣고, 만드는 옷들은 짤막하다. [小作冠帽，短製衣裳。]<br />
 자기를 부르길 아농(阿儂)이며, 말하는 족족이 아방(阿傍)이라. [自呼阿儂，語則阿傍。]<br />
-줄풀과 피[稗]로써 밥을 짓고, 차를 마시고 장(漿)을 만든다. [菰稗為飯，茗飲作漿。] </p>
+줄풀과 피[稗]로써 밥을 짓고, 차를 마시고 장(漿)을 만든다. [菰稗為飯，茗飲作漿。]</p>
 </blockquote>
 
 <p>이것으로 끝내지 않고 양원신은 순챗국, 게 요리 등 남방의 음식을 나열하면서 강남의 문화를 마음껏 비하합니다. 여기서도 남방의 괴상한(?) 음식 중 차가 먼저 꼽혔습니다. 남조 사람들은 차를 어지간히 많이 마신 모양이고 북조 사람들은 그것을 어지간히 조롱한 모양입니다.</p>
@@ -267,9 +267,9 @@
 
 <blockquote>
   <p>손님: (똑똑똑) <br />
-주인: 누구인강? [誰**儂**？] <br />
-손님: 나당. [我**儂**。] <br />
-주인: (문을 열고) 너였구낭! [卻是你**儂**。] </p>
+주인: 누구인강? [誰<strong>儂</strong>？] <br />
+손님: 나당. [我<strong>儂</strong>。] <br />
+주인: (문을 열고) 너였구낭! [卻是你<strong>儂</strong>。]</p>
 </blockquote>
 
 <p>(오늘날의 상하이 일부에 해당하는) 바닷가 마을에서는 이렇게 “나”, “너”, “누구” 등 온갖 인칭대명사에 농(儂)을 붙여 써서, 타 지역 사람들이 이 마을을 3농의 땅[三儂之地]이라고 불렀다고 합니다. 농(儂)을 쓰는 사람들을 조롱하는 풍습은 이렇게 양나라부터 원나라까지 천 년을 이어진 것입니당…</p>
