--- a/imperial-scents/index.html
+++ b/imperial-scents/index.html
@@ -258,21 +258,23 @@
 
 <p>재료를 살펴봅시다. 대체로 약재가 많이 들어가서 약 냄새가 강합니다.</p>
 
-<ul>
-  <li>황숙향<sup>黃熟香</sup> 4근(64냥)</li>
-  <li>향부자<sup>香附子</sup> 2근(32냥)</li>
-  <li>정향피<sup>丁香皮</sup> 5냥</li>
-  <li>곽향엽<sup>藿香葉</sup> 4냥</li>
-  <li>영릉향<sup>零陵香</sup> 4냥</li>
-  <li>단향<sup>檀香</sup> 4냥</li>
-  <li>백지<sup>白芷</sup> 4냥</li>
-  <li>모향<sup>茅香</sup> 2근(32냥)</li>
-  <li>회향<sup>茴香</sup> 2냥</li>
-  <li>감송<sup>甘松</sup> 반근(8냥)</li>
-  <li>유향<sup>乳香</sup> 1냥</li>
-  <li>침향<sup>沉香</sup> 4냥</li>
-  <li>대추<sup>棗</sup> 반근(8냥)</li>
-</ul>
+<blockquote>
+  <ul>
+    <li>황숙향<sup>黃熟香</sup> 4근(64냥)</li>
+    <li>향부자<sup>香附子</sup> 2근(32냥)</li>
+    <li>정향피<sup>丁香皮</sup> 5냥</li>
+    <li>곽향엽<sup>藿香葉</sup> 4냥</li>
+    <li>영릉향<sup>零陵香</sup> 4냥</li>
+    <li>단향<sup>檀香</sup> 4냥</li>
+    <li>백지<sup>白芷</sup> 4냥</li>
+    <li>모향<sup>茅香</sup> 2근(32냥)</li>
+    <li>회향<sup>茴香</sup> 2냥</li>
+    <li>감송<sup>甘松</sup> 반근(8냥)</li>
+    <li>유향<sup>乳香</sup> 1냥</li>
+    <li>침향<sup>沉香</sup> 4냥</li>
+    <li>대추<sup>棗</sup> 반근(8냥)</li>
+  </ul>
+</blockquote>
 
 <p>이 정도 배합이면 《향승》에서도 매우 호화스러운 향에 속합니다. <a href="https://www.instagram.com/p/Ca1jZa3vzNA/?igshid=YmMyMTA2M2Y=">저도 재료를 구해서 손수 만들어 보고자 했는데…</a> 황건기의를 전적으로 지지하게 되었습니다. 황제가 이런 사치를 부리니까 농민들이 들고일어나지!</p>
 
@@ -282,12 +284,14 @@
 
 <p>당대의 백과사전의 일종인 《예문유취》에 《상물잡소》라는 제목으로 조조가 헌제에게 바친 향로의 목록이 나옵니다. 궁에서 다양한 신분의 황족들이 각기 자기 향로를 가지고 있었다는 것을 알 수 있습니다.</p>
 
-<ul>
-  <li>황제: 순금향로 1개 (쟁반 포함)</li>
-  <li>귀인, 공주: 순은향로 4개</li>
-  <li>황태자: 순은향로 4개</li>
-  <li>서원귀인: 동향로 30개</li>
-</ul>
+<blockquote>
+  <ul>
+    <li>황제: 순금향로 1개 (쟁반 포함)</li>
+    <li>귀인, 공주: 순은향로 4개</li>
+    <li>황태자: 순은향로 4개</li>
+    <li>서원귀인: 동향로 30개</li>
+  </ul>
+</blockquote>
 
 <p>그리고 송대의 백과사전 《태평어람》에 수록된 조조의 《위무령》에 따르면, 조조가 평소에 집에서 향 피우기를 금지했는데 딸들이 헌제와 결혼할 때 향을 사용했다고 합니다. 황궁에서 향을 피우는 것은 필수적인 의례의 일부였던 것입니다.</p>
 
