--- a/page4/index.html
+++ b/page4/index.html
@@ -191,7 +191,7 @@
                 <a class="text-dark" href="/aweng/">아옹(阿翁)의 해석 문제: 어린 조간은 과연 맏형 조비를 ‘할아버지’라고 불렀나?</a>
                 
             </h2>
-            <h4 class="card-text">🧒 조간(5세): **아옹(阿翁)**! 😭 조비(34세): 나는 네 형밖에 안 된단다… 《삼국지》 위지20 〈조왕간전〉 주석에 인용된 《위략》에 나오는 장면입니다. 조간은 조조가 예순 살이 넘어서 슬하에 둔 아들입니다. 조조는 죽으면서 큰아들 조비에게...</h4>
+            <h4 class="card-text">🧒 조간(5세): 아옹(阿翁)! 😭 조비(34세): 나는 네 형밖에 안 된단다… 《삼국지》 위지20 〈조왕간전〉 주석에 인용된 《위략》에 나오는 장면입니다. 조간은 조조가 예순 살이 넘어서 슬하에 둔 아들입니다. 조조는 죽으면서 큰아들 조비에게...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
