--- a/three-excellencies/index.html
+++ b/three-excellencies/index.html
@@ -241,9 +241,8 @@
                 
                 <!-- End Toc -->
                 <blockquote>
-  <p>A: 요<sup>堯</sup>는 순<sup>舜</sup>을, 탕<sup>湯</sup>은 이윤<sup>伊尹</sup>을, 주<sup>周</sup> 성왕<sup>成王</sup>은 주공<sup>周公</sup>과 소공<sup>召公</sup>을 삼공<sup>三公</sup>으로 삼았습니다.</p>
-
-  <p>B: 그런데 삼공은 뭐죠?</p>
+  <p>A: 요<sup>堯</sup>는 순<sup>舜</sup>을, 탕<sup>湯</sup>은 이윤<sup>伊尹</sup>을, 주<sup>周</sup> 성왕<sup>成王</sup>은 주공<sup>周公</sup>과 소공<sup>召公</sup>을 삼공<sup>三公</sup>으로 삼았습니다. <br />
+B: 그런데 삼공은 뭐죠?</p>
 </blockquote>
 
 <p>삼공<sup>三公</sup>이란 천자<sup>天子</sup>의 신하 중에서 가장 높은 지위를 가리킵니다. 마치 세 개의 직책이 먼저 있었고 그 직책을 통틀어 부르는 말로 ‘삼공’이 생겼을 것 같지만, 아무래도 실제는 그 반대였던 것 같습니다. 적어도 <a href="https://ctext.org/">Chinese Text Project</a>에서 검색 가능한 기록으로는 전국 시대 이전에 삼공의 구성요소를 언급한 것을 찾을 수 없습니다. 서한 때 정립된 책에 와서야 삼공이 어떤 관직으로 이루어져 있는지를 구체적으로 논하고 있습니다.</p>
