--- a/zhuge-liang-s-meal/index.html
+++ b/zhuge-liang-s-meal/index.html
@@ -247,8 +247,8 @@
 <p>도대체 제갈량이 밥을 얼마나 적게 먹었기에 사마의가 이런 반응을 보였을까요? 다행히도 《진서》 버전에서 구체적인 수량을 찾을 수 있습니다.</p>
 
 <blockquote>
-  <p> 사마의: 제갈 공이 식사는 몇 **미(米)**나 하시는가? [食可幾米] <br />
-사자: **3–4승(升)**입니다. [三四升] </p>
+  <p>사마의: 제갈 공이 식사는 몇 <strong>미(米)</strong>나 하시는가? [食可幾米] <br />
+사자: <strong>3–4승(升)</strong>입니다. [三四升]</p>
 </blockquote>
 
 <p>이 글에서는 이 “미 3–4승”이라는 식사량이 얼마나 많은지, 혹은 적은지 알아보겠습니다.</p>
@@ -286,7 +286,7 @@
 <p>앞서서 살펴본 제갈량의 식사량은 미(米)를 기준으로 계산한 것이므로, 이제 속(粟)을 미(米)로 환산하는 방법을 알아봅시다. 《구장산술》 〈속미〉에서는 미(米)를 4개 등급으로 나누고 아래와 같이 정의합니다.</p>
 
 <blockquote>
-  <p> 속(粟) : 여미(糲米) : 패미(粺米) : 착미(𥽦米) : 어미(御米) = 50 : 30 : 27 : 24 : 21 </p>
+  <p>속(粟) : 여미(糲米) : 패미(粺米) : 착미(𥽦米) : 어미(御米) = 50 : 30 : 27 : 24 : 21</p>
 </blockquote>
 
 <p>속(粟) 50을 빻았을 때 제일 거칠게 빻은 여미(糲米)가 30, 제일 곱게 빻은 어미(御米)가 21이 나온다는 의미입니다. 제갈량이 승상씩이나 되어서 등급이 가장 낮은 여미(糲米)를 먹지는 않았을 것이고 어미(御米)를 먹는 사치를 부렸을 것 같지도 않으므로, 대략 중간을 취해서 25 정도로 가정해 봅시다. 그러면 속(粟)과 미(米)의 부피비가 50:25, 즉 2:1이 됩니다. 따라서 성년 남자의 1일 표준 식사량인 속(粟) 1말=10되를 미(米)로 바꾸면 5되가 됩니다.</p>
