deploy: zya-han/zya-han.github.io-private@5b765bef399025fdc31810808b1f200ec5c63bf0

--- a/hua-tuo-s-cream-mask/index.html
+++ b/hua-tuo-s-cream-mask/index.html
@@ -270,7 +270,7 @@
 </blockquote>
 
 <p>목록을 자세히 보면 마지막 네 가지의 동물성 재료로 연고의 제형을 만들고, 나머지 스물여덟 가지 재료가 약효나 향을 내었으리라고 추측할 수 있습니다.
-그야말로 28종의 약재를 넣은 한방(漢方) 연고! 인 셈입니다.</p>
+그야말로 28종의 약재를 넣은 한방<sup>漢方</sup> 연고! 인 셈입니다.</p>
 
 <h4 id="면고-사용법">면고 사용법</h4>
 
