deploy: zya-han/zya-han.github.io-private@b858af5a5597602227eac70e724e444d8495f139

--- a/two-versions-of-misogyny/index.html
+++ b/two-versions-of-misogyny/index.html
@@ -245,11 +245,9 @@
 <p>아무래도 현대인에게 익숙한 여성혐오 패턴은 이것입니다.</p>
 
 <blockquote>
-  <p>[남자는 우월하고 여자는 열등하다]</p>
-
-  <p>전제: 여자는 원래 남자보다 <strong>지성이 부족</strong>하다.</p>
-
-  <p>결론: 그러므로 여자는 남자의 다스림을 받는 비천한 위치에 있어야 한다.</p>
+  <p>[남자는 우월하고 여자는 열등하다]<br />
+전제: 여자는 원래 남자보다 <strong>지성이 부족</strong>하다.<br />
+결론: 그러므로 여자는 남자의 다스림을 받는 비천한 위치에 있어야 한다.</p>
 </blockquote>
 
 <p>여성의 능력이 부족하기 때문에 여성의 지위가 낮아야 한다는 믿음은 여러 시대와 지역에 걸쳐 존재했겠지만, 아(雅)가 느끼기로는 무엇보다 근대 유럽의 냄새가 강하게 납니다. 특히 여성의 이성이 남성보다 떨어진다는 것을 ‘과학적’으로 설명하려고 했던 서구의 남성 지식인들이 떠오릅니다.</p>
@@ -261,11 +259,9 @@
 <p>아(雅)가 추측하기에 한나라 사람들의 여성혐오 패턴은 아래에 더 가까웠을 것입니다.</p>
 
 <blockquote>
-  <p>[남자는 존귀하고 여자는 비천하다]</p>
-
-  <p>전제: 여자는 원래 남자보다 <strong>비천한 위치</strong>에 있다.</p>
-
-  <p>결론: 그러므로 여자는 남자보다 지성이 부족해야/부족해도 된다.</p>
+  <p>[남자는 존귀하고 여자는 비천하다]<br />
+전제: 여자는 원래 남자보다 <strong>비천한 위치</strong>에 있다.<br />
+결론: 그러므로 여자는 남자보다 지성이 부족해야/부족해도 된다.</p>
 </blockquote>
 
 <p>이 패턴에서는 여성의 능력이 남성 이상일 가능성을 부정하지 않습니다. 하지만 그것은 미덕으로 권장되지 않습니다. 예를 들어 《후한서》 〈황후기〉에서 화희황후 등수는 열두 살에 《시경》과 《논어》에 통달했고, 오빠들이 경전을 읽다가 어려운 내용이 나오면 동생인 등수에게 물어볼 정도로 학식을 인정받았지만, 어머니는 하라는 바느질은 안 하고 책만 읽는다고 등수를 꾸짖기만 했습니다. 또 훗날 등수의 스승이 되는 여성 학자 반소는 《여계》에서 여자가 남편에게 복종해야 한다고 설파했으며, 그 근본적인 이유로 여자는 태어날 때부터 남자보다 낮은 지위로 태어났다는 것을 들었습니다. 《여계》에서는 여성의 덕행, 언어, 용모, 기술이 남들보다 뛰어날 필요가 없다고 선언했습니다. 여기서 뛰어날 필요가 없다는 것은 여성이 지켜야 할 규범이지, 태생적으로 뛰어나지 않다는 본성에 관한 말이 아닙니다.</p>
