deploy: zya-han/zya-han.github.io-private@e369b7c198be276312bf2324b04ac280ff3192ea

--- a/sanguo-pocket-02/index.html
+++ b/sanguo-pocket-02/index.html
@@ -302,7 +302,7 @@
 <h4 id="인용-방법">인용 방법</h4>
 
 <ul>
-  <li>주아, 삼국지포켓북2: 호칭어 가이드. <a href="https://zya-han.github.io/sanguo-pocket-02/">https://zya-han.github.io/sanguo-pocket-02/</a></li>
+  <li>주아, 삼국지포켓북2: 예의를 버리고 음식을 구하다. <a href="https://zya-han.github.io/sanguo-pocket-02/">https://zya-han.github.io/sanguo-pocket-02/</a></li>
 </ul>
 
 <hr />
