deploy: zya-han/zya-han.github.io-private@f09827a19dcd0bdab3e0dd8f2a5c334de5ce0e74

--- a/sanguo-pocket-06/index.html
+++ b/sanguo-pocket-06/index.html
@@ -240,9 +240,9 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391102"><strong>삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기</strong></a></p>
-</blockquote>
+                <div class="buy-button">
+  📕 [**삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기**](https://buymeacoffee.com/zya.han/e/391102)
+</div>
 
 <hr />
 
